--- a/config.json
+++ b/config.json
@@ -6,7 +6,7 @@
     "minecraft": {
         "username": "claymorelamb98@yahoo.com",
         "password": "Coopertk0571!",
-        "serverIP": "play.thearchon.net",
+        "serverIP": "play.arcadius.org",
         "version": "1.8.8",
         "joinCMD": "/hub",
         "ftopCMD": "/f top"
